# nacho-operators

cert-monitor-operator/: BUILD.bazel  Dockerfile  Makefile  PROJECT  README.md  generate_build_push.sh  go.mod  go.sum  steps_to_clean.md  version.bzl
cert-monitor-operator-INITIAL/: .dockerignore  generate_build_push.sh
cert-monitor-operator-INITIAL/api/v1alpha1/: BUILD.bazel
cert-monitor-operator-INITIAL/charts/cert-monitor-operator/templates/: cert-monitor-opsgenie-apikey-secret.yaml  deployment.yaml  (+1 more)
cert-monitor-operator-INITIAL/cmd/: main.go
cert-monitor-operator-INITIAL/config/crd/: kustomization.yaml
cert-monitor-operator-INITIAL/config/manager/: kustomization.yaml  manager.yaml
cert-monitor-operator-INITIAL/config/rbac/: certificatemonitor_editor_role.yaml  kustomization.yaml
cert-monitor-operator-INITIAL/config/samples/: certmonitor_v1alpha1_certificatemonitor.yaml
cert-monitor-operator-INITIAL/internal/controller/: BUILD.bazel  certificatemonitor_controller.go  certificatemonitor_controller_test.go
cert-monitor-operator-INITIAL/pkg/notifications/: BUILD.bazel  notifications.go
cert-monitor-operator-INITIAL/pkg/utils/: secrets.go
cert-monitor-operator/api/v1alpha1/: certificatemonitor_types.go  groupversion_info.go  zz_generated.deepcopy.go
cert-monitor-operator/charts/cert-monitor-operator/: Chart.yaml  values.yaml
cert-monitor-operator/cmd/: BUILD.bazel  main.go
cert-monitor-operator/config/crd/: kustomization.yaml
cert-monitor-operator/config/default/: kustomization.yaml  metrics_service.yaml
cert-monitor-operator/config/manifests/: kustomization.yaml
cert-monitor-operator/config/network-policy/: allow-metrics-traffic.yaml
cert-monitor-operator/config/prometheus/: monitor.yaml
cert-monitor-operator/config/rbac/: certificatemonitor_editor_role.yaml  certificatemonitor_viewer_role.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
cert-monitor-operator/config/samples/: certmonitor_v1alpha1_certificatemonitor.yaml  kustomization.yaml
cert-monitor-operator/internal/controller/: certificatemonitor_controller.go  certificatemonitor_controller_test.go  suite_test.go
cert-monitor-operator/pkg/notifications/: notifications.go
cert-monitor-operator/pkg/utils/: BUILD.bazel
cert-monitor-operator/test/e2e/: BUILD.bazel  e2e_suite_test.go  e2e_test.go
cert-monitor-operator/test/utils/: BUILD.bazel
docs/: cert-monitor-operator.md  index.md
kafka-access-monitor-operator/: BUILD.bazel  Makefile  PROJECT  README.md  TEXTO-PARA-PR.md  version.bzl
kafka-access-monitor-operator/api/v1alpha1/: BUILD.bazel  groupversion_info.go  kafkaaccessquery_types.go  zz_generated.deepcopy.go
kafka-access-monitor-operator/charts/kafka-access-monitor-operator/: Chart.yaml  values.yaml
kafka-access-monitor-operator/charts/kafka-access-monitor-operator/crds/: accessmonitor.masorange.com_kafkaaccessqueries.yaml
kafka-access-monitor-operator/charts/kafka-access-monitor-operator/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  kafka-access-monitor-ai-apikey-secret.yaml  kafka-access-monitor-opsgenie-apikey-secret.yaml  kafka-access-monitor-slack-apikey-secret.yaml  kafkaaccessmonitor.yaml  parser-configmap.yaml  serviceaccount.yaml 
kafka-access-monitor-operator/cmd/: BUILD.bazel  main.go
kafka-access-monitor-operator/config/crd/: kustomization.yaml
kafka-access-monitor-operator/config/default/: kustomization.yaml  metrics_service.yaml
kafka-access-monitor-operator/config/manager/: manager.yaml
kafka-access-monitor-operator/config/manifests/: kustomization.yaml
kafka-access-monitor-operator/config/network-policy/: allow-metrics-traffic.yaml
kafka-access-monitor-operator/config/prometheus/: monitor.yaml
kafka-access-monitor-operator/config/rbac/: kafkaaccessquery_editor_role.yaml  kafkaaccessquery_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
kafka-access-monitor-operator/config/samples/: accessmonitor_v1alpha1_kafkaaccessquery.yaml  kustomization.yaml
kafka-access-monitor-operator/internal/ai/: BUILD.bazel  analyzer.go
kafka-access-monitor-operator/internal/controller/: BUILD.bazel  kafkaaccessquery_controller.go  kafkaaccessquery_controller_test.go  suite_test.go
kafka-access-monitor-operator/internal/discovery/: BUILD.bazel  authn_enricher.go  broker_log_finder.go  configmap_finder.go  diagnostics_finder.go  gcp_metrics_finder.go  kafka_parser.go  metrics_finder.go  pod_finder.go  secret_finder.go  slack_reporter.go
kafka-access-monitor-operator/test/utils/: BUILD.bazel
upgrade-orchestrator/: DetailOPeration.md  Makefile  PROJECT  README.md  go.mod  go.sum
upgrade-orchestrator/api/v1alpha1/: groupversion_info.go  upgradeorchestrator_types copy.go.txt  upgradeorchestrator_types.go  upgradeorchestrator_types.go_PODversion  zz_generated.deepcopy.go
upgrade-orchestrator/cmd/: main.go
upgrade-orchestrator/config/crd/: kustomization.yaml
upgrade-orchestrator/config/default/: kustomization.yaml  metrics_service.yaml
upgrade-orchestrator/config/manager/: manager.yaml
upgrade-orchestrator/config/manifests/: kustomization.yaml
upgrade-orchestrator/config/network-policy/: allow-metrics-traffic.yaml
upgrade-orchestrator/config/prometheus/: monitor.yaml
upgrade-orchestrator/config/rbac/: kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml  upgradeorchestrator_editor_role.yaml  upgradeorchestrator_viewer_role.yaml
upgrade-orchestrator/config/samples/: apps_v1alpha1_upgradeorchestrator.yaml  kustomization.yaml
upgrade-orchestrator/internal/controller/: suite_test.go  upgradeorchestrator_controller.go  upgradeorchestrator_controller.go.back.txt  upgradeorchestrator_controller.go.releasePDB  upgradeorchestrator_controller.go.xxx  upgradeorchestrator_controller_test.go
upgrade-orchestrator/test/e2e/: e2e_suite_test.go  e2e_test.go
(+11 files in other folders)
