load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["certificatemonitor_controller.go"],
    importpath = "github.com/masmovil/mm-monorepo/pkg/runtime/operators/cert-monitor-operator/internal/controller",
    visibility = ["//pkg/runtime/operators/cert-monitor-operator:__subpackages__"],
    deps = [
        "//pkg/runtime/operators/cert-monitor-operator/api/v1alpha1:go_default_library",
        "//pkg/runtime/operators/cert-monitor-operator/pkg/notifications:lib",
        "//pkg/runtime/operators/cert-monitor-operator/pkg/utils:lib",
        "//vendor/github.com/go-logr/logr:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/client-go/util/retry:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/builder:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/log:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/predicate:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "certificatemonitor_controller_test.go",
        "suite_test.go",
    ],
    embed = [":go_default_library"],
    tags = ["manual"],  #TODO: remove this tag when the test is ready to run automatically
    deps = [
        "//pkg/runtime/operators/cert-monitor-operator/api/v1alpha1:go_default_library",
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/envtest:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/log:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/log/zap:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/reconcile:go_default_library",
    ],
)
