load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["analyzer.go"],
    importpath = "github.com/masmovil/mm-monorepo/pkg/runtime/operators/kafka-access-monitor-operator/internal/ai",
    visibility = ["//pkg/runtime/operators/kafka-access-monitor-operator:__subpackages__"],
    deps = [
        "//pkg/runtime/operators/kafka-access-monitor-operator/api/v1alpha1:go_default_library",
        "//vendor/github.com/go-logr/logr:go_default_library",
    ],
)
